<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/restaurant"
            android:contentDescription="@string/restaurant_image"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="16dp"
            >
            <TextView
                android:text="@string/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"/>

            <TextView
                android:text="@string/home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </FrameLayout>

</androidx.core.widget.NestedScrollView>